Simplify Title Icon and resolve stretching

--- a/src/css/livesplit.css
+++ b/src/css/livesplit.css
@@ -258,7 +258,6 @@ div.meta-two-lines > div#lower-row > div.title-attempts {
     padding-left: 5px;
     padding-top: 3px;
     position: absolute;
-    left: 0
 }
 
 .run-meta {
@@ -280,11 +279,9 @@ div.meta-two-lines > div#lower-row > div.title-attempts {
 }
 
 img.title-icon {
-    max-width: 100%;
-    max-height: 100%;
     height: 100%;
-    display: block;
-    margin: auto;
+    width: 100%;
+    object-fit: contain;
 }
 
 .splits {
@@ -335,7 +332,7 @@ table {
     padding-right: 0px !important;
 }
 
-.split-icon, .title-icon {
+.split-icon {
     max-width: 18px;
     height: 18px;
     vertical-align: middle;
